<resources xmlns:tools="http://schemas.android.com/tools"
           tools:locale="zh-rCN">
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="a_common_network_refresh">获取数据失败，请点击刷新</string>
    <string name="a_loading_text">正在加载…</string>
    <string name="a_loading_failed">加载失败了,点击重新加载</string>
    <string name="a_loading_list_null">暂无内容</string>
    <string name="a_pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="a_overefresh_update">更新于</string>
    <string name="a_pull_to_refresh_release_label">松开可以刷新</string>
    <string name="a_list_hint_loading">正在加载…</string>
    <string name="a_list_hint_pulldown_to_refresh">下拉可以刷新</string>
    <string name="a_list_hint_release_to_refresh">释放可以刷新</string>
    <string name="a_list_hint_pullup_to_load_more">上拉以加载更多</string>
    <string name="a_list_hint_release_to_load_more">释放以加载更多</string>
    <string name="a_main_exit_confirm">再按一次退出比心直播</string>
    <string name="a_playing_exit_confirm">再按一次退出直播间</string>
    <string name="a_progress_loading">数据加载中，请稍后…</string>
    <string name="a_progress_loadfailed">数据加载失败，点击重试!</string>
    <string name="a_list_data_empty">没有数据，点击重新加载</string>
    <string name="a_tips_net_error">加载失败,请检查网络连接</string>
    <string name="a_progress_sending_message">正在发送…</string>
    <string name="home_sign_tip">您还不是主播，是否要报名？</string>
    <string name="home_sign">去报名</string>
    <string name="home_hot">精选</string>
    <string name="home_hot_group">精选饭圈</string>
    <string name="home_hot_dynamic">精选动态</string>
    <string name="home_me_group">我的饭圈</string>
    <string name="home_all">显示全部</string>
    <string name="home_new_dynamic">最新动态</string>
    <string name="home_live_msg">╥﹏╥..</string>
    <string name="home_live_new_message_tip">有新内容</string>
    <string name="welcome_sign_error_tip">该应用被篡改过，请到官方正规渠道下载.</string>
    <string name="a_main_home">首页</string>
    <string name="a_main_tab_anchor">直播</string>
    <string name="a_main_tab_setting">设置</string>
    <string name="a_main_tab_rank">排行</string>
    <string name="a_main_tab_community">社区</string>
    <string name="a_main_tab_community_title">广场</string>
    <string name="a_main_tab_me">我的</string>
    <string name="a_tab_me_title">个人中心</string>
    <string name="a_main_exit_message">确认退出比心直播吗？</string>
    <string name="chat_text">聊天</string>
    <string name="audience_text">观众</string>
    <string name="rank_text">排行</string>
    <string name="other_text">其他</string>
    <string name="private_chat_text">私聊</string>
    <string name="gift_give">送礼</string>
    <string name="play_loading">加载中...</string>
    <string name="anchor_resting">主播正在休息呢</string>
    <string name="paly_gift_num_empty">礼物数量不能少于1</string>
    <string name="ban_tip">被 %1$s 禁言</string>
    <string name="unban_tip">被 %1$s 解禁</string>
    <string name="setadmin_tip">被 %1$s 设置为管理</string>
    <string name="unsetadmin_tip">被 %1$s 取消管理</string>
    <string name="ti_room">被 %1$s 踢出房间</string>
    <string name="ti_room_2">您已被 %1$s 踢出房间</string>
    <string name="anchor_update_coin">还差%1$s经验可升级</string>
    <string name="network_title">网络连接提示</string>
    <string name="network_setting_msg">哎呀~网络没有连接，是否去设置网络?</string>
    <string name="network_2G_msg">网络已切换到2G/3G/4G，是否继续播放?</string>
    <string name="network_2G_msg_2">您正在使用2G/3G/4G网络播放视频</string>
    <string name="network_continue">继续</string>
    <string name="network_quit">退出</string>
    <string name="server_error">服务器异常</string>
    <string name="anchor_search_hit">搜索主播昵称或ID</string>
    <string name="anchor_search_text">搜索</string>
    <string name="anchor_search_text_empty">请输入搜索关键字</string>
    <string name="anchor_search_empty">没有找到相关的主播哦</string>
    <string name="anchor_search_fail">加载数据失败.</string>
    <string name="anchor_tab_hot">推荐</string>
    <string name="anchor_tab_new">新人</string>
    <string name="anchor_tab_near">身边</string>
    <string name="anchor_tab_recommend">推荐</string>
    <string name="anchor_btn_live_new">去看其他精彩直播</string>
    <string name="anchor_live_new_empty_msg">还没有最新开播的主播哦（▼へ▼メ）</string>
    <string name="anchor_live_focus_empty_msg">你还没有关注过任何主播呢(；′⌒`)</string>
    <string name="anchor_live_tag_live_empty_msg">该分类下暂时没有主播开播哦(；′⌒`)</string>
    <string name="anchor_live_focus_live_empty_msg">你关注的主播还没有开播哦(；′⌒`)</string>
    <string name="live_location_fail_tip">请在手机设置中开启GPS或WLAN定位服务以看到附近用户</string>
    <string name="live_start_location">开启定位</string>
    <string name="message_title">温馨提示</string>
    <string name="logout_msg">真的要离开吗？</string>
    <string name="logout_cancel">再看看</string>
    <string name="setting_open_notification_msg">打开系统消息通知，才能收到主播开播提醒哦</string>
    <string name="share_dialog_title">分享到</string>
    <string name="share_dialog_weixin">微信</string>
    <string name="share_dialog_pengyouquan">朋友圈</string>
    <string name="share_dialog_weibo">微博</string>
    <string name="share_dialog_qqzone">QQ空间</string>
    <string name="share_dialog_qq">QQ</string>
    <string name="share_dialog_renren">人人网</string>
    <string name="gift_general_text">热门</string>
    <string name="gift_guard_text">背包</string>
    <string name="gift_guard_2_text">守护</string>
    <string name="rank_day">日</string>
    <string name="rank_week">周</string>
    <string name="rank_month">月</string>
    <string name="rank_total">总</string>
    <string name="rank_star">明星榜</string>
    <string name="rank_popularity">热门榜</string>
    <string name="rank_wealth">财富榜</string>
    <string name="rank_dayP">日榜</string>
    <string name="rank_weekP">周榜</string>
    <string name="rank_monthP">月榜</string>
    <string name="rank_totalP">总榜</string>
    <string name="rank_totalP_num">贡献%1$s比心</string>
    <string name="rank_star_day_explain">日榜为当天获得比心前10名的播主，每日0点清空重计</string>
    <string name="rank_star_week_explain">周榜为本周获得比心前10名的播主，每周日0点清空重计</string>
    <string name="rank_star_month_explain">月榜为本月收到比心前100名的播主，每月1号0点清空重计</string>
    <string name="rank_star_total_explain">总榜为获得比心前10名的播主</string>
    <string name="rank_popularity_day_explain">日榜为过去24小时获得鲜花数前10名的播主</string>
    <string name="rank_popularity_week_explain">周榜为过去1周获得鲜花数前10名的播主</string>
    <string name="rank_popularity_total_explain">人气榜为收到鲜花前10名的播主</string>
    <string name="rank_wealth_day_explain">日榜为当天送出比心数前10名的用户，每日0点清空重计</string>
    <string name="rank_wealth_week_explain">周榜为本周送出比心数前10名的用户，每周日0点清空重计</string>
    <string name="rank_wealth_total_explain">总榜为送出比心数前10名的用户</string>
    <string name="rank_totalP_num_label">比心数</string>
    <string name="rank_no_data">趁没人赶紧上榜吧n(*≧▽≦*)n</string>
    <string name="rank_net_err">网太渣啊，点击重新加载</string>
    <string name="commutity_post">动态详情</string>
    <string name="relay_loading_failed">回复信息加载失败,点击重新加载</string>
    <string name="me_speak">我来说两句...</string>
    <string name="relay_tip">暂无评论，快来抢沙发吧</string>
    <string name="edit_post">发帖</string>
    <string name="commutity_reply">回复</string>
    <string name="commutity_view">围观</string>
    <string name="commutity_host">楼主</string>
    <string name="commutity_collect">收藏</string>
    <string name="commutity_collect_cancel">取消收藏</string>
    <string name="commutity_delete">删除</string>
    <string name="commutity_click_flush">点击刷新楼层</string>
    <string name="commutity_share_item">分享</string>
    <string name="commutity_report_item">举报</string>
    <string name="commutity_catelory_all">全部</string>
    <string name="commutity_catelory_switch">切换栏目</string>
    <string name="commutity_catelory_post_count">话题%1$s</string>
    <string name="commutity_catelory_replay_count">回复%1$s</string>
    <string name="commutity_catelory_new_replay">最新回复</string>
    <string name="commutity_catelory_hot">热帖</string>
    <string name="commutity_catelory_text">#"%1$s"#</string>
    <string name="commutity_tab_hot">热门</string>
    <string name="commutity_tab_fan">饭圈</string>
    <string name="commutity_add_fan">加入饭圈</string>
    <string name="commutity_create_fan">创建饭圈</string>
    <string name="commutity_access_fan">进入饭圈</string>
    <string name="commutity_fan_host">圈主</string>
    <string name="commutity_fan_unlock_text">%1$s/%2$s 还需%3$s人可以解锁</string>
    <string name="commutity_fan_search_hit">搜索饭圈</string>
    <string name="commutity_fan_freeze">冻结中</string>
    <string name="commutity_fan_unlock">已解锁</string>
    <string name="commutity_fan_add_text">已加入</string>
    <string name="commutity_fan_add_tip">加入后才可去饭圈里愉快地玩耍哦~</string>
    <string name="commutity_fan_activate_tip">饭圈被激活后才可以在里面愉快地玩耍~</string>
    <string name="commutity_fan_add_succuss">你已成功加入该饭圈~</string>
    <string name="commutity_fan_search_empty_tip">未搜到您要找的饭圈，不如自己去创建一个吧</string>
    <string name="commutity_fan_search_tip">点击查找《%1$s"》相关的饭圈</string>
    <string name="commutity_fan_create_tip">此功能暂未开放，你可以去直播间为主播创建饭圈</string>
    <string name="commutity_fan_popularity">人气</string>
    <string name="commutity_fan_post">帖子</string>
    <string name="commutity_fan_fans">粉丝</string>
    <string name="commutity_menber_admin">管理员</string>
    <string name="commutity_fan_post_nodata">暂无帖子数据</string>
    <string name="commutity_fan_nodata">没有更多数据</string>
    <string name="commutity_fan_menber_num">群成员：%1$s人</string>
    <string name="commutity_fan_menber_search_hit">搜索成员</string>
    <string name="commutity_fan_menber_status_create">创建</string>
    <string name="commutity_fan_menber_status_add">加入</string>
    <string name="commutity_fan_menber_search_empty">没有找到相关的成员哦</string>
    <string name="anchor_msg_begin">提示：请保持光线效果明亮，且清晰地\n显示你的正面，尽量使用高像素的\n摄像头进行录制</string>
    <string name="anchor_msg_complete">提示：请先确认您录制的视频，满意后再\n上传，审核期间不能重新录制提交</string>
    <string name="anchor_camera_begin">开始录制</string>
    <string name="live_report_anchor_msg">举报内容</string>
    <string name="live_report_upload_img_msg">上传举报截图</string>
    <string name="live_report_upload_img_resolve_msg">上传举报截图</string>
    <string name="live_report_msg">认真举报的，官方核实后，将予以奖励；\n
        若胡乱举报，一经核实，则有可能被封号；\n
        请大家慎重举报，共同维护比心的良好环境！
    </string>
    <string name="app_name">比心直播</string>
    <string name="slogan">千万情意 | 唯独为你</string>
    <string name="copyright">Copyright@2015 guojiang.tv</string>
    <string name="all_rights_reserved">All Rights Reserved</string>
    <string name="cancel">取消</string>
    <string name="protocol">服务条款</string>
    <string name="protocol_content">
        服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款服务条款
    </string>
    <string name="about_content">比心直播-播出比心灿烂</string>
    <string name="other">其他</string>
    <string name="submit">提交</string>
    <string name="pink_content">色情内容</string>
    <string name="spam">垃圾广告</string>
    <string name="personal_attacks">人身攻击</string>
    <string name="sensitive_information">敏感信息</string>
    <string name="false_winning">虚假中奖</string>
    <string name="input_advise">意见输入：</string>
    <string name="your_contact">您的联系方式：方便我们及时联系您哦~</string>
    <string name="submit_advise">提交反馈</string>
    <string name="welcome_advise">hi，欢迎您给我们提意见哦~记得留下您的QQ或电话或
        微信或邮箱等联系方式哦~以方便我们及时与您联系沟
        通(づ￣3￣)づ╭❤～
    </string>
    <string name="advise_msg">您也可以关注我们的微信公众号“果酱时代”，在那里可
        以及时和客服妹子联系哦~（微信通讯录-公众号页面右上
        角点击“+”号，输入“果酱时代”，搜索，然后点击第
        一个，进入后点关注，这样就可以与客服沟通啦~
    </string>
    <string name="common_dialog_permission_exception">手机%1$s无法开启？</string>
    <string name="common_dialog_permission_method_1_title">解决方法1：</string>
    <string name="common_dialog_permission_method_2_title">解决方法2：</string>
    <string name="common_dialog_permission_method_1">在手机的系统设置中找到比心直播应用，将%1$s的权限设置为允许</string>
    <string name="common_dialog_permission_method_2">检查当前%1$s是否被其他应用占用</string>
</resources>