<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/a_bg_color_ffffff"
              android:orientation="vertical">

    <include layout="@layout/a_common_top_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="13dp"
        android:text="@string/live_report_anchor_msg"
        android:textColor="@color/a_text_color_999999"
        android:textSize="@dimen/a_text_size_36"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/fragment_playing_other_btn_pink_content"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yello_pre"
            android:text="@string/pink_content"
            android:textColor="@color/a_text_color_666666"
            android:textSize="@dimen/a_text_size_45"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/fragment_playing_other_btn_spam"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/btn_yello_pre"
            android:text="@string/spam"
            android:textColor="@color/a_text_color_666666"
            android:textSize="@dimen/a_text_size_45"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/fragment_playing_other_btn_personal_attacks"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/btn_yello_pre"
            android:text="@string/personal_attacks"
            android:textColor="@color/a_text_color_666666"
            android:textSize="@dimen/a_text_size_45"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/fragment_playing_other_btn_sensitive_information"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/btn_yello_pre"
            android:text="@string/sensitive_information"
            android:textColor="@color/a_text_color_666666"
            android:textSize="@dimen/a_text_size_45"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/fragment_playing_other_btn_false_winning"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/btn_yello_pre"
            android:text="@string/false_winning"
            android:textColor="@color/a_text_color_666666"
            android:textSize="@dimen/a_text_size_45"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/fragment_playing_other_btn_other"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@drawable/btn_yello_pre"
            android:text="@string/other"
            android:textColor="@color/a_text_color_666666"
            android:textSize="@dimen/a_text_size_45"/>

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="22dp"
        android:text="@string/live_report_upload_img_msg"
        android:textColor="@color/a_text_color_999999"
        android:textSize="@dimen/a_text_size_36"/>

    <com.bixin.bixin.ui.AutoHeightGridView
        android:id="@+id/gridView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_add_maopao_width"
        android:layout_marginLeft="40dp"
        android:background="@color/trans"
        android:cacheColorHint="#00000000"
        android:columnWidth="@dimen/image_add_maopao_width"
        android:gravity="center"
        android:horizontalSpacing="8dp"
        android:listSelector="#00000000"
        android:numColumns="1"
        android:stretchMode="none"
        android:verticalSpacing="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="8dp"
        android:text="@string/live_report_upload_img_resolve_msg"
        android:textColor="@color/a_text_color_b2b2b2"
        android:textSize="@dimen/a_text_size_30"/>

    <Button
        android:id="@+id/live_report_btn_commit"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="58dp"
        android:background="@drawable/btn_live_report_commit_selector"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/a_text_color_333333"
        android:textSize="@dimen/a_text_size_48"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/live_report_msg"
        android:textColor="@color/a_text_color_b2b2b2"
        android:textSize="@dimen/a_text_size_30"
        android:visibility="gone"/>
</LinearLayout>