<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_permission_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/a_text_color_333333"
        android:textSize="@dimen/a_text_size_45"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_permission_exception"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="18dp"
        android:text="@string/common_dialog_permission_exception"
        android:textColor="@color/a_text_color_666666"
        android:textSize="@dimen/a_text_size_42" />

    <TextView
        android:id="@+id/dialog_permission_method_1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1.33dp"
        android:layout_marginLeft="18dp"
        android:text="@string/common_dialog_permission_method_1_title"
        android:textColor="@color/a_text_color_333333"
        android:textSize="@dimen/a_text_size_42" />

    <TextView
        android:id="@+id/dialog_permission_method_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="44dp"
        android:text="@string/common_dialog_permission_method_1"
        android:textColor="@color/a_text_color_666666"
        android:textSize="@dimen/a_text_size_42" />

    <TextView
        android:id="@+id/dialog_permission_method_2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1.33dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/common_dialog_permission_method_2_title"
        android:textColor="@color/a_text_color_333333"
        android:textSize="@dimen/a_text_size_42" />

    <TextView
        android:id="@+id/dialog_permission_method_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="44dp"
        android:text="@string/common_dialog_permission_method_2"
        android:textColor="@color/a_text_color_666666"
        android:textSize="@dimen/a_text_size_42" />

</LinearLayout>