<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/a_bg_color_f0f0f0"
                tools:context="tv.live.bx.activities.AboutActivity">

    <include layout="@layout/a_common_top_bar"/>

    <TextView
        android:id="@+id/about_tv_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/slogan"
        android:textColor="@color/text_light_gray"
        android:textSize="12sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/about_tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/a_text_color_999999"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/about_tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_tv_version"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:text="@string/about_content"
        android:textColor="@color/text_gray"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/about_tv_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/about_logo"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_logo"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:layout_marginLeft="17dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/text_app_name_gray"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:text="@string/copyright"
        android:textColor="@color/text_light_gray"
        android:textSize="12.5sp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/all_rights_reserved"
        android:textColor="@color/text_light_gray"
        android:textSize="12sp"
        android:visibility="gone"/>

</RelativeLayout>