<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/anchor_camera_bottom"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/a_bg_color_e6e6e6"
        android:gravity="center" >

        <TextView
            android:id="@+id/anchor_camera_bottom_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/a_bg_ffffff_f0f0f0_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/a_text_color_333333"
            android:textSize="@dimen/a_text_size_45" />

        <TextView
            android:id="@+id/anchor_camera_bottom_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/a_bg_ffffff_f0f0f0_selector"
            android:gravity="center"
            android:text="@string/anchor_camera_begin"
            android:textColor="@color/a_text_color_333333"
            android:textSize="@dimen/a_text_size_45"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/anchor_camera_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/anchor_camera_bottom" />

    <TextView
        android:id="@+id/anchor_camera_coplete_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/anchor_msg_complete"
        android:textColor="@android:color/white"
        android:textSize="@dimen/a_text_size_36"
        android:visibility="gone" />

    <TextView
        android:id="@+id/anchor_camera_begin_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/anchor_camera_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        android:text="@string/anchor_msg_begin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/a_text_size_36" />

</RelativeLayout>