<?xml version="1.0" encoding="utf-8"?>
<com.bixin.bixin.ui.LoadingProgressEmptyJump xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/progress"
                                        style="@style/Base.MM"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:orientation="vertical"
                                        app:LoadingEmptyLayout="@+id/live_new_empty_layout"
                                        app:LoadingInfo="@+id/loading_info"
                                        app:LoadingProgress="@+id/loading_progress" >

    <LinearLayout
        android:id="@+id/live_new_empty_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/live_empty_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/anchor_live_new_empty_msg"
            android:textColor="@color/a_text_color_999999"
            android:textSize="@dimen/a_text_size_36" />

        <Button
            android:id="@+id/live_new_btn_back_hot"
            android:layout_width="250dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_btn_live_new_selector"
            android:text="@string/anchor_btn_live_new"
            android:textColor="@color/a_text_color_333333"
            android:textSize="@dimen/a_text_size_45" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_dialog_loading" />

        <TextView
            android:id="@id/loading_info"
            style="@style/Base.WW"
            android:gravity="center_horizontal"
            android:lineSpacingMultiplier="1.4"
            android:padding="10dp"
            android:text="@string/a_loading_text"
            android:textColor="@color/event_item_expire_text"
            android:textSize="14sp" />
    </LinearLayout>

</com.bixin.bixin.ui.LoadingProgressEmptyJump>